--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationEdit.cshtml
@@ -6,39 +6,49 @@
         <input type="hidden" name="objID" value="@Model.Id">
         <input type="submit" />
         <!--Current Caretaker-->
-        <input type="hidden" value="@Model.CaretakerID" asp-for="CaretakerID" />
-        <input type="hidden" value="@Model.PatientID" asp-for="PatientID" />
+        <input type="hidden" value="@LoginStatus.LogginedUser.Id" asp-for="CaretakerID" />
+        <input type="hidden" value="@LoginStatus.SelectedPatient.PatientID" asp-for="PatientID" />
         <!-- Medication name field-->
         <div class="registerField">
             <input class="form-control" asp-for="MedicationName" placeholder="Medication Name" />
         </div>
-        <!-- Method of taking field-->
+        <!-- Unit field-->
         <div class="registerField">
-            <input class="form-control" asp-for="MethodOfTaking" placeholder="Method of Taking" />
-        </div>
-        <!-- Dosage field-->
-        <div class="registerField">
-            <input class="form-control" asp-for="Dosage" placeholder="Dosage" />
+            <table>
+                <tr>
+                    <td>
+                        <input class="form-control" type="number" min="0" id="unit-numeric" onchange="unitModified()" placeholder="Unit" />
+                    </td>
+                    <td>
+                        <select class="form-control" id="unit-unit" onchange="unitModified()">
+                            <option value="g">g</option>
+                            <option value="IU">IU</option>
+                            <option value="mcg">mcg</option>
+                            <option value="mcg/hr">mcg/hr</option>
+                            <option value="mcg/ml">mcg/ml</option>
+                            <option value="mEg">mEg</option>
+                            <option value="mg">mg</option>
+                            <option value="mg/cm2">mg/cm2</option>
+                            <option value="mg/g">mg/g</option>
+                            <option value="mg/ml">mg/ml</option>
+                            <option value="ml">ml</option>
+                            <option value="pct">%</option>
+                        </select>
+                    </td>
+                </tr>
+            </table>
+            <input style="display:none" asp-for="Unit" id="concated-unit" />
         </div>
         <!-- Quantity field-->
         <div class="registerField">
             <input class="form-control" asp-for="Quantity" min="0" placeholder="Quantity" />
         </div>
-        <!-- Medicine type field-->
-        <div class="registerField">
-            <select class="form-control  mb-3" asp-for="MedicationType">
-                <option selected>Medicine Type</option>
-                <option value="pill">Pill</option>
-                <option value="syrup">Syrup</option>
-                <option value="spray">Spray</option>
-            </select>
-        </div>
 
         <!-- Frequency field-->
         <div class="registerField">
             <select class="form-control mb-3" asp-for="Frequency">
-                <option selected>Frequency</option>
-                <option value="Every Day" selected>Every Day</option> <!--Hours Between = 24 hours-->
+                <option selected disabled>Frequency</option>
+                <option value="Every Day">Every Day</option> <!--Hours Between = 24 hours-->
                 <option value="Specific Days">Specific Days</option>
                 <option value="Days Interval">Days Interval</option>
                 <option value="Birth Control Cycle">Birth Control Cycle</option>
@@ -58,6 +68,29 @@
             <input class="form-control" type="number" asp-for="HoursBetween" min="0" placeholder="HoursBetween" />
         </div>
 
+        <!-- HoursBetween field-->
+        <div class="registerField">
+            <label style="margin: 0;">Select a shape as an identifier</label><br />
+
+            <select class="form-control" id="shape-selector" asp-for="Shape" onChange="shapeSelectorChange()">
+                <option selected disabled>Please select a shape</option>
+                @{
+                    if (LoginStatus.SelectedPatient.UnSelectedShapes.Count != 0)
+                    {
+                        foreach (Shape s in LoginStatus.SelectedPatient.UnSelectedShapes)
+                        {
+                            <option value="@s.ShapeName">@s.ShapeDisplay</option>
+                        }
+                    }
+                    else
+                    {
+                        <option disabled>Out of shapes</option>
+                    }
+                }
+            </select>
+            <img id="shape-display" />
+        </div>
+
         <!--Upload Pill Image field-->
         <div class="registerField">
             <label>Upload Medication</label> <br />
@@ -74,8 +107,77 @@
     </form>
 </div>
 
-<script type="text/javascript">$('#file-upload').change(function () {
+<script type="text/javascript">
+    $('#file-upload').change(function () {
         var i = $(this).prev('label').clone();
         var file = $('#file-upload')[0].files[0].name;
         $(this).prev('label').text(file);
-    });</script>
+    });
+
+    function unitModified() {
+        var numericUnit = document.getElementById("unit-numeric").value;
+        var unitType = document.getElementById("unit-unit").value;
+        var concatedUnit = document.getElementById("concated-unit");
+
+        concatedUnit.value = numericUnit + " " + unitType;
+    }
+
+    function shapeSelectorChange() {
+        var selectedShape = document.getElementById("shape-selector").value;
+        var shapeDisplay = document.getElementById("shape-display");
+
+        switch (selectedShape) {
+            case "circle":
+                shapeDisplay.src = "/img/shapes/circle.PNG";
+                break;
+            case "oval":
+                shapeDisplay.src = "/img/shapes/oval.PNG";
+                break;
+            case "triangle":
+                shapeDisplay.src = "/img/shapes/Triangle.PNG";
+                break;
+            case "heart":
+                shapeDisplay.src = "/img/shapes/Heart.PNG";
+                break;
+            case "pentagon":
+                shapeDisplay.src = "/img/shapes/pentagon.PNG";
+                break;
+            case "hexagon":
+                shapeDisplay.src = "/img/shapes/hexagon.PNG";
+                break;
+            case "octagon":
+                shapeDisplay.src = "/img/shapes/octagon.PNG";
+                break;
+            case "rightTri":
+                shapeDisplay.src = "/img/shapes/right_triangle.PNG";
+                break;
+            case "sTri":
+                shapeDisplay.src = "/img/shapes/sTriangle.PNG";
+                break;
+            case "square":
+                shapeDisplay.src = "/img/shapes/square.PNG";
+                break;
+            case "rectangle":
+                shapeDisplay.src = "/img/shapes/rectangle.PNG";
+                break;
+            case "parallelogram":
+                shapeDisplay.src = "/img/shapes/parallelogram.PNG";
+                break;
+            case "trapezuim":
+                shapeDisplay.src = "/img/shapes/Trapezuim.PNG";
+                break;
+            case "rhombus":
+                shapeDisplay.src = "/img/shapes/Rhombus.PNG";
+                break;
+            case "4star":
+                shapeDisplay.src = "/img/shapes/4pointStar.PNG";
+                break;
+            case "star":
+                shapeDisplay.src = "/img/shapes/star.PNG";
+                break;
+            case "6star":
+                shapeDisplay.src = "/img/shapes/6pointStar.PNG";
+                break;
+        }
+    }
+</script>
