--- a/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
+++ b/MedOnTime-WebApp/MedOnTime-WebApp/Views/Medication/MedicationDelete.cshtml
@@ -15,6 +15,7 @@
             <td>
                 <form asp-action="MedicationDelete" method="post">
                     <input type="hidden" name="objID" value="@Model.Id" />
+                    <input type="hidden" name="medShape" value="@Model.Shape" />
                     <input type="submit" value="Delete" class="btn btn-danger" />
                 </form>
             </td>
